alter style paths

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
             integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
         <!-- Cover template -->
-        <link href="/css/cover.css" rel="stylesheet">
+        <link href="css/cover.css" rel="stylesheet">
 
         <!-- Custom styles -->
-        <link rel="stylesheet" href="/css/custom.css">
+        <link rel="stylesheet" href="css/custom.css">
 
         <!-- jQuery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
