--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <header class="masthead mb-auto">
             <div class="inner">
-                <h3 class="masthead-brand">Digital Skilling Policy Map</h3>
+                <h3 class="masthead-brand justify-content-center">Digital Skilling Policy Map</h3>
             </div>
         </header>
 
@@ -345,6 +345,28 @@
                     <li id="DD">Digital Divide</li>
                 </ul>
                 <div class="container" id="state_notes">
+                </div>
+            </div>
+
+
+            <!-- MODAL VERSION OF NOTES -->
+            <div class="modal fade" id="notesModal" tabindex="-1" role="dialog" aria-labelledby="notesModal"
+                aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel"></h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-primary">Send message</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </main>
