--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
                     -->
             </svg>
             <!-- NOTES SECTION -->
-            <div class="container" id="notes_div">
+            <!-- <div class="container" id="notes_div">
                 <h1>Notes: </h1>
                 <h3>Key:</h3>
                 <ul>
@@ -346,16 +346,15 @@
                 </ul>
                 <div class="container" id="state_notes">
                 </div>
-            </div>
-
+            </div> -->
 
             <!-- MODAL VERSION OF NOTES -->
-            <div class="modal fade" id="notesModal" tabindex="-1" role="dialog" aria-labelledby="notesModal"
+            <div class="modal fade" id="notesModal" data-toggle="notesModal" tabindex="-1" role="dialog" aria-labelledby="notesModal"
                 aria-hidden="true">
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLabel"></h5>
+                            
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
@@ -364,7 +363,6 @@
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-primary">Send message</button>
                         </div>
                     </div>
                 </div>
