--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
             <header class="masthead mb-auto">
                 <div class="inner">
-                    <h3 class="masthead-brand justify-content-center">Digital Skilling Policy Map</h3>
+                    <h3 class="masthead-brand justify-content-center">Digital Skills for Public Workforce Systems Map</h3>
                     <nav class="nav nav-masthead justify-content-center">
                         <a class="nav-link active" href="#" id="US">US</a>
                         <a class="nav-link" href="#" id="world">World</a>
