add wioa dollars

--- a/index.html
+++ b/index.html
@@ -53,16 +53,16 @@
                     <div class="col-6">
                         <h1 class="cover-heading">USA</h1>
                     </div>                    
-                    <div class="col-2" id="demand">
-                        <h1>BigNumber</h1>
+                    <div class="col-2" >
+                        <h1 id="demand">BigNumber</h1>
                         <p>Demand</p>
                     </div>
-                    <div class="col-2" id="supply">
-                        <h1>BigNumber</h1>
+                    <div class="col-2" >
+                        <h1 id="supply">BigNumber</h1>
                         <p>Supply</p>
                     </div>
-                    <div class="col-2" id="wioa_dollars">
-                        <h1>BigNumber</h1>
+                    <div class="col-2" >
+                        <h1 id="wioa_dollars">BigNumber</h1>
                         <p>WIOA Dollars</p>
                     </div>
                     
