--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
         <!-- jspdf -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.2/jspdf.min.js"></script>
         
+        <!-- PDF Maker -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.68/pdfmake.min.js"
+            integrity="sha512-gYUM+7JjtBqPPGOgwgOZ+NwjGl+11/EP124oB+ihjlBpLgP5LTh7R/Iwcdy//cgH+QzrjspBiJI5iUegTNww3w=="
+            crossorigin="anonymous"></script>
         
     </head>
     <body class="text-center">
@@ -41,6 +45,7 @@
                     <nav class="nav nav-masthead justify-content-center">
                         <a class="nav-link active" href="#" id="US">US</a>
                         <a class="nav-link" href="#" id="world">World</a>
+                        <a class="nav-link" href="/pages/more_info.html" id="More Info">More Info</a>
                     </nav>
                 </div>
             </header>
