--- a/index.html
+++ b/index.html
@@ -29,12 +29,16 @@
         <!-- <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script> -->
 
         <!-- jspdf -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.2/jspdf.min.js"></script>
+        <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.2/jspdf.min.js"></script> -->
         
         <!-- PDF Maker -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.68/pdfmake.min.js"
             integrity="sha512-gYUM+7JjtBqPPGOgwgOZ+NwjGl+11/EP124oB+ihjlBpLgP5LTh7R/Iwcdy//cgH+QzrjspBiJI5iUegTNww3w=="
             crossorigin="anonymous"></script>
+        <script src='/js/vfs_fonts.js'></script>
+
+        <!-- PDF Kit -->
+        <!-- <script src="https://cdn.jsdelivr.net/npm/pdfkit@0.11.0/js/pdfkit.min.js"></script> -->
         
     </head>
     <body class="text-center">
