--- a/pages/more_info.html
+++ b/pages/more_info.html
@@ -53,7 +53,7 @@
 
         <main role="main" class="inner cover">
 
-            <div class="row">
+            <div class="row justify-content-md-center">
                 <div class="col-6">
                     <!-- Page Content -->
                     <div id="page-content-wrapper">
