--- a/pages/more_info.html
+++ b/pages/more_info.html
@@ -44,7 +44,7 @@
                 <h3 class="masthead-brand justify-content-center">Additional Information
                 </h3>
                 <nav class="nav nav-masthead justify-content-center">
-                    <a class="nav-link " href="/index.html" id="US">US</a>
+                    <a class="nav-link " href="/pages/us_map.html" id="US">US</a>
                     <a class="nav-link" href="/index.html" id="world">World</a>
                     <a class="nav-link active" href="/pages/more_info.html" id="More Info">More Info</a>
                 </nav>
