smaller min width for note content

--- a/pages/us_map.html
+++ b/pages/us_map.html
@@ -100,10 +100,10 @@
                 <div class="col-6 no_padding">
                     <div class="container" id="data_container">
                         <div class="row">
-                            <div class="col no_padding" id="plan_data_buttons">
+                            <div class="col-sm no_padding" id="plan_data_buttons">
 
                             </div>
-                            <div class="col" >
+                            <div class="col-sm" id="content-col">
                                 <div id="data_content_header">
 
                                 </div>
@@ -112,7 +112,7 @@
                                 </div>
                                 
                             </div>
-                            <div class="col no_padding" id="program_data_buttons">
+                            <div class="col-sm no_padding" id="program_data_buttons">
                             
                             </div>
                         </div>
