add quant, new lewks

--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
 
         <!-- PDF Kit -->
         <!-- <script src="https://cdn.jsdelivr.net/npm/pdfkit@0.11.0/js/pdfkit.min.js"></script> -->
+
+
+        <!-- Google fonts -->
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Raleway&display=swap" rel="stylesheet">
         
     </head>
     <body class="text-center">
