--- a/pages/us_map.html
+++ b/pages/us_map.html
@@ -25,6 +25,10 @@
     <!-- jspdf -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.2/jspdf.min.js"></script>
 
+    <!-- Google fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Raleway&display=swap" rel="stylesheet">
+
 
 </head>
 <body>
@@ -50,11 +54,11 @@
                 </div>
                 <div class="col-6">
                     <div class="row" id="data_tabs">
-                        <div class="col-auto mr-auto">
-                            <div class="data_tab active" id="plan"> <h1>Plan</h1> </div>
+                        <div class="col-auto mr-auto no_padding">
+                            <div class="data_tab active" id="plan"> <h3>State awareness</h3> </div>
                         </div>
-                        <div class="col-auto">
-                            <div class="data_tab active" id="programs"> <h1>Programs</h1> </div>
+                        <div class="col-auto no_padding">
+                            <div class="data_tab active " id="programs"> <h3>State actions</h3> </div>
                         </div>
                         <!-- <div class="col-md-auto">
                             <a type="button" id="pdf"> <h1>Factsheet</h1> </a>
@@ -85,11 +89,11 @@
                             </div>
                             <div class="col">
                                 <h1 class="number" id="EL">Number</h1>
-                                <p class="number-type" id="EL-type">Total Engaged Learners</p>
+                                <p class="number-type" id="EL-type">Total LinkedIn and Microsoft Learn "engaged learners."</p>
                             </div>
                             <div class="col">
                                 <h1 class="number" id="LP">Number</h1>
-                                <p class="number-type" id="LP-type">Total Learning Paths Complete</p>
+                                <p class="number-type" id="LP-type">Total LinkedIn and Microsoft Learn learning paths completed.</p>
                             </div>
                             <div class="col">
                                 <a type="button" id="explore_data"><h1>Explore Data</h1></a>
