--- a/pages/us_map.html
+++ b/pages/us_map.html
@@ -50,12 +50,12 @@
             <!-- State title/ Data tabs row-->
             <div class="row">
                 <div class="col-6">
-                    <h1 class="cover-heading" id="state_name">USA</h1>
+                    <h1 class="cover-heading" id="state_name">First, select a state</h1>
                 </div>
                 <div class="col-6">
                     <div class="row" id="data_tabs">
                         <div class="col-auto mr-auto no_padding">
-                            <div class="data_tab active" id="plan"> <h3>State awareness</h3> </div>
+                            <div class="data_tab active" id="plan"> <h3>State plans</h3> </div>
                         </div>
                         <div class="col-auto no_padding">
                             <div class="data_tab active " id="programs"> <h3>State actions</h3> </div>
@@ -76,12 +76,15 @@
                     <div class="container">
                         <div class="row">
                             <div class="col">
-                                <h1 class="number" id="supply">Number</h1>
-                                <p class="number-type" id="supply-type">Supply</p>
-                            </div>
-                            <div class="col">
                                 <h1 class="number" id="demand">Number</h1>
                                 <p class="number-type" id="demand-type">Demand</p>
+                            </div>
+                            <div class="col">
+                                <h1 class="number" id="supply">Number</h1>
+                                <p class="number-type" id="supply-type">Supply</p>
+                                <!-- <p class="number-definition">
+                                    Here is one explanation of how we calculated this number. 
+                                </p> -->
                             </div>
                             <div class="col">
                                 <h1 class="number" id="dollars">Number</h1>
@@ -112,7 +115,7 @@
 
                                 </div>
                                 <div id="data_content">
-                                    
+                                    Then, select an indicator.
                                 </div>
                                 
                             </div>
@@ -182,4 +185,6 @@
     <script src="/js/cards.js"></script>
     <script src="/js/pdf.js"></script>
     <script src="/js/new_map_interaction.js"></script>
+    <script src="/js/hover.js"></script>
+
 </body>
