added iwt dollars

--- a/pages/us_map.html
+++ b/pages/us_map.html
@@ -76,26 +76,30 @@
                     <div class="container">
                         <div class="row">
                             <div class="col">
-                                <h1 class="number" id="demand">Number</h1>
+                                <h3 class="number" id="demand">Number</h3>
                                 <p class="number-type" id="demand-type">Demand</p>
                             </div>
                             <div class="col">
-                                <h1 class="number" id="supply">Number</h1>
+                                <h3 class="number" id="supply">Number</h3>
                                 <p class="number-type" id="supply-type">Supply</p>
                                 <!-- <p class="number-definition">
                                     Here is one explanation of how we calculated this number. 
                                 </p> -->
                             </div>
                             <div class="col">
-                                <h1 class="number" id="dollars">Number</h1>
+                                <h3 class="number" id="dollars">Number</h3>
                                 <p class="number-type" id="dollar-type">Dollars</p>
                             </div>
                             <div class="col">
-                                <h1 class="number" id="EL">Number</h1>
+                                <h3 class="number" id="iwt-dollars">Number</h3>
+                                <p class="number-type" id="iwt-dollar-type">Dollars</p>
+                            </div>
+                            <div class="col">
+                                <h3 class="number" id="EL">Number</h3>
                                 <p class="number-type" id="EL-type">Total LinkedIn and Microsoft Learn "engaged learners."</p>
                             </div>
                             <div class="col">
-                                <h1 class="number" id="LP">Number</h1>
+                                <h3 class="number" id="LP">Number</h3>
                                 <p class="number-type" id="LP-type">Total LinkedIn and Microsoft Learn learning paths completed.</p>
                             </div>
                             <div class="col">
