fix world, temporarily remove print out

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <h3 class="masthead-brand justify-content-center">Addressing Digital Skills Needs: a State-by-State Scorecard</h3>
                     <nav class="nav nav-masthead justify-content-center">
                         <a class="nav-link" href="/pages/us_map.html" id="US">US</a>
-                        <a class="nav-link" href="#" id="world">World</a>
+                        <a class="nav-link" href="/pages/world_map.html" id="world">World</a>
                         <a class="nav-link" href="/pages/more_info.html" id="More Info">More Info</a>
                     </nav>
                 </div>
