--- a/pages/us_map.html
+++ b/pages/us_map.html
@@ -76,23 +76,23 @@
                     <div class="container">
                         <div class="row">
                             <div class="col">
-                                <h3 class="number" id="demand">Number</h3>
-                                <p class="number-type" id="demand-type">Demand</p>
+                                <h3 class="number" id="demand">0</h3>
+                                <p class="number-type" id="demand-type">Estimate of job openings requiring digital skills</p>
                             </div>
                             <div class="col">
-                                <h3 class="number" id="supply">Number</h3>
-                                <p class="number-type" id="supply-type">Supply</p>
+                                <h3 class="number" id="supply">0</h3>
+                                <p class="number-type" id="supply-type">Estimate of unemployed workers without digital skills</p>
                                 <!-- <p class="number-definition">
                                     Here is one explanation of how we calculated this number. 
                                 </p> -->
                             </div>
                             <div class="col">
-                                <h3 class="number" id="dollars">Number</h3>
-                                <p class="number-type" id="dollar-type">Dollars</p>
+                                <h3 class="number" id="dollars">$ 0</h3>
+                                <p class="number-type" id="dollar-type">Federal dislocated worker funding per unemployed person</p>
                             </div>
                             <div class="col">
-                                <h3 class="number" id="iwt-dollars">Number</h3>
-                                <p class="number-type" id="iwt-dollar-type">Dollars</p>
+                                <h3 class="number" id="iwt-dollars">$ 0</h3>
+                                <p class="number-type" id="iwt-dollar-type">Annual state funding for incumbent worker training</p>
                             </div>
                             <!-- <div class="col">
                                 <h3 class="number" id="EL">Number</h3>
