--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
 
             </main>
             <footer>
-                <div>Icons made by <a href="https://smashicons.com/" title="Smashicons">Smashicons</a> from <a
-                        href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+                <!-- <div>Icons made by <a href="https://smashicons.com/" title="Smashicons">Smashicons</a> from <a
+                        href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> -->
 
             </footer>
 
