--- a/pages/us_map.html
+++ b/pages/us_map.html
@@ -50,7 +50,7 @@
             <!-- State title/ Data tabs row-->
             <div class="row">
                 <div class="col-6">
-                    <h1 class="cover-heading" id="state_name">First, select a state</h1>
+                    <h1 class="cover-heading" id="state_name">Select a state.</h1>
                 </div>
                 <div class="col-6">
                     <div class="row" id="data_tabs">
@@ -119,7 +119,7 @@
 
                                 </div>
                                 <div id="data_content">
-                                    Then, select an indicator.
+                                    Select an indicator.
                                 </div>
                                 
                             </div>
