add France, Germany, Spain, Italy to world map

--- a/pages/world_map.html
+++ b/pages/world_map.html
@@ -50,71 +50,61 @@
 
             <!-- State title/ Data tabs row-->
             <div class="row">
-                <div class="col">
+                <div class="col-7">
                     <h3 class="cover-heading" id="country_name">Select a Country</h3>
                 </div>
-                <!-- <div class="col-2"> -->
-                    <!-- <div class="row" id="data_tabs">
+                <div class="col-5">
+                    <div class="row" id="data_tabs">
                         <div class="col-auto mr-auto no_padding">
-                            <div class="data_tab active" id="plan">
+                            <div class="data_tab active" id="plan" style="display:none;">
                                 <h3>State plans</h3>
                             </div>
                         </div>
                         <div class="col-auto no_padding">
                             <div class="data_tab active " id="programs">
-                                <h3>State actions</h3>
+                                <h3>Indicators</h3>
                             </div>
-                        </div> -->
+                        </div>
                         <!-- <div class="col-md-auto">
                             <a type="button" id="pdf"> <h1>Factsheet</h1> </a>
                         </div> -->
-                    <!-- </div> -->
-                <!-- </div> -->
+                    </div>
+                </div>
             </div>
 
             <!-- Map, data container row -->
             <div class="row">
-                <div class="col" id="map_col">
+                <div class="col-7" id="map_col">
                     <div class="map" id="world_map">
 
                     </div>
-                    <!-- <div class="container">
+                    <div class="container">
                         <div class="row">
                             <div class="col">
-                                <h3 class="number" id="demand">Number</h3>
-                                <p class="number-type" id="demand-type">Demand</p>
+                                <h3 class="number" id="individuals_have_digital_skills">0</h3>
+                                <p class="number-type" id="individuals_have_digital_skills_type"></p>
                             </div>
                             <div class="col">
-                                <h3 class="number" id="supply">Number</h3>
-                                <p class="number-type" id="supply-type">Supply</p>
-                                <p class="number-definition">
-                                    Here is one explanation of how we calculated this number. 
-                                </p>
+                                <h3 class="number" id="jobs_use_computer">0</h3>
+                                <p class="number-type" id="jobs_use_computer_type"></p>
                             </div>
                             <div class="col">
-                                <h3 class="number" id="dollars">Number</h3>
-                                <p class="number-type" id="dollar-type">Dollars</p>
+                                <h3 class="number" id="individuals_self_improve_cities">0</h3>
+                                <p class="number-type" id="individuals_self_improve_type"></p>
                             </div>
                             <div class="col">
-                                <h3 class="number" id="iwt-dollars">Number</h3>
-                                <p class="number-type" id="iwt-dollar-type">Dollars</p>
+                                <h3 class="number" id="individuals_self_improve_suburbs">0</h3>
+                                <p class="number-type" id="individuals_self_improve_suburbs_type"></p>
                             </div>
                             <div class="col">
-                                <h3 class="number" id="EL">Number</h3>
-                                <p class="number-type" id="EL-type">Total LinkedIn and Microsoft Learn "engaged learners."</p>
-                            </div>
-                            <div class="col">
-                                <h3 class="number" id="LP">Number</h3>
-                                <p class="number-type" id="LP-type">Total LinkedIn and Microsoft Learn learning paths completed.</p>
-                            </div>
-                            <div class="col">
-                                <a type="button" href="#explore_data" class="js-scroll-trigger" id="explore_data"><h1>Explore Data</h1></a>
+                                <h3 class="number" id="individuals_self_improve_rural">0</h3>
+                                <p class="number-type" id="individuals_self_improve_rural_type"></p>
                             </div>
                         </div>
-                    </div> -->
+                    </div>
                 </div>
-                <!-- <div class="col-2 no_padding"> -->
-                    <!-- <div class="container" id="data_container">
+                <div class="col-5 no_padding">
+                    <div class="container" id="data_container">
                         <div class="row">
                             <div class="col-sm no_padding" id="plan_data_buttons">
 
@@ -124,7 +114,6 @@
 
                                 </div>
                                 <div id="data_content">
-                                    Then, select an indicator.
                                 </div>
 
                             </div>
@@ -132,8 +121,8 @@
 
                             </div>
                         </div>
-                    </div> -->
-                <!-- </div> -->
+                    </div>
+                </div>
             </div>
 
 
