--- a/pages/more_info.html
+++ b/pages/more_info.html
@@ -51,6 +51,7 @@
                     <a class="nav-link " href="/pages/us_map.html" id="US">US</a>
                     <a class="nav-link" href="/index.html" id="world">World</a>
                     <a class="nav-link active" href="/pages/more_info.html" id="More Info">More Info</a>
+                    <a class="nav-link inactive">(Beta Version)</a>
                 </nav>
             </div>
         </header>
