--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                         <a class="nav-link" href="/pages/us_map.html" id="US">US</a>
                         <a class="nav-link" href="/pages/world_map.html" id="world">World</a>
                         <a class="nav-link" href="/pages/more_info.html" id="More Info">More Info</a>
+                        <a class="nav-link inactive">(Beta Version)</a>
                     </nav>
                 </div>
             </header>
