--- a/pages/world_map.html
+++ b/pages/world_map.html
@@ -43,6 +43,7 @@
                     <a class="nav-link" href="/pages/us_map.html" id="US">US</a>
                     <a class="nav-link active" href="/pages/world_map.html" id="world">World</a>
                     <a class="nav-link" href="/pages/more_info.html" id="More Info">More Info</a>
+                    <a class="nav-link inactive">(Beta Version)</a>
                 </nav>
             </div>
         </header>
