--- a/pages/more_info.html
+++ b/pages/more_info.html
@@ -115,88 +115,73 @@
                                 <!-- Identified in-demand digital skills -->
                                 <h5>The state has identified in-demand digital skills needs using Statewide data.</h5>
                                 <p class='info_p'>
-                                    The State demonstrates a recognition that digital skills are a growing need not only in the technology sector, but
-                                    across occupations. This recognition can be demonstrated through labor market information combined with analysis of
-                                    available data.
-                                </p>
-                                <p class='info_p'>
-                                    <span class='strong-yes'>Yes example: Colorado</span> 
-                                </p>
-                                <p class="info_p">
-                                    The WIOA State plan notes that “employer preferences have been trending toward computer/technology
-                                    competencies as among the most-in-demand job skills” and lists “interacting with computers” as a technology skill that
-                                    Colorado employers often require.
-                                </P>
-                                <p class="info_p">
-                                    The WIOA State plan identifies one of the top ten in-demand skills across all occupations as “agile software
-                                    development”. The plan notes that “in addition to identifying skills required to perform in an occupation, it is
-                                    important to provide upskilling opportunities for employees because new technology is causing a shift in how work is
-                                    being done, creating opportunities for workers to be more productive and efficient. However, this means that workers’
-                                    knowledge, skills, and abilities need to ensure they are digitally literate, agile, and can keep up with the
-                                    continuously shifting nature of work.” 
-                                </p>
-                                <p class="info_p">
-                                    Colorado's WIOA State plan recognizes the need for digital skills across all sectors, not solely in technology or computer science fields. 
-                                    Additionally, the plan notes that the nature of work is constantly shifting and that employees need to be able to adapt to the 
-                                    changing work landscape.
-                                </p>
-                                <p class='info_p'>
-                                    <span class='strong-no'>No example: Alaska</span>
-                                </p>
-                                <p class="info_p">
-                                    Alaska projects a 6.3 percent growth in just computer and mathematical jobs by 2028. This projection does not indicate
-                                    the State has identified in-demand digital skills needs using Statewide data. Although Alaska has used Statewide data to
-                                    make this projection, there is not an apparent connection being made between the growth in technology jobs (and other
-                                    occupations) and a growing need for digital skills.
+                                    State has identified in-demand digital skills needs using Statewide data? The State demonstrates a recognition that
+                                    digital skills are a growing need not only in the technology sector, but across occupations. The strongest States
+                                    demonstrate this recognition by highlighting specific labor market information combined with an analysis of available
+                                    data.
                                 </p>
 
                                 <!-- Comprehensive Plan -->
                                 <h5>State has comprehensive plan to address digital skills needs.</h5>
                                 <p class="info_p">
-                                    The State has developed a plan that is Statewide, addresses the need for digital skills (beyond digital literacy), and
-                                    that focuses on digital skilling efforts more so than a general re-employment effort (for example, those related to
-                                    COVID-19 re-employment efforts).
+                                    State has comprehensive plan to address digital skills needs? The State has developed a plan that is Statewide,
+                                    addresses the growing need for digital skills (beyond digital literacy), and that focuses on digital skilling efforts.
+                                    Comprehensive plans to address digital skills needs go beyond general re-employment efforts (for example, those related
+                                    to COVID-19 re-employment efforts).
                                 </p>
+
+
+                                <!-- Broadband Plan -->
+                                <h5>State has a plan to address the digital divide (broadband).</h5>
                                 <p class="info_p">
-                                    <span class="strong-yes">Yes example: Rhode Island</span>
+                                    State has a plan for addressing the digital divide (broadband)? The State has officially published specific goals about
+                                    increasing broadband access and may have published reports focusing on the need for broadband access in the State.
                                 </p>
+
+                                <!-- State of State -->
+                                <h5>Digital skills are prioritized by the governor.</h5>
                                 <p class="info_p">
-                                    According to the WIOA State plan: “By focusing on essential skill building and digital literacy, work-based learning and
-                                    work experience opportunities, high quality career counseling, apprenticeship development, and incumbent worker
-                                    training, Rhode Island offers a responsive workforce development network that is as well prepared to connect Rhode
-                                    Islanders to their first career as their next one. For employers, the network offers an array of services that assist a
-                                    business at nearly every step of the career path and rung of the organizational ladder from industry awareness for
-                                    future workers, to recruitment and training for new hires, to incumbent worker training and upskilling opportunities for
-                                    current workers. The State has worked hard to position the workforce development network as an extension of a
-                                    businesses’ own Human Resource office-delivering the right solution at the right time.”
+                                    Digital skills prioritized by governor? The Governor makes an explicit mention to the need to develop digital skills in
+                                    the State’s workforce during the State of the State speech.
                                 </p>
+
+                                <!-- Community Colleges -->
+                                <h5>State has innovative digital skills programs at community colleges.</h5>
                                 <p class="info_p">
-                                    <span class="strong-yes">Yes example: Ohio</span>
+                                    Innovative digital skills programs at community colleges? The State’s community colleges have specific programs or
+                                    initiatives that target digital skill development, going beyond traditional course offerings in technology-related
+                                    fields such as Information Technology.
                                 </p>
+
+                                <!-- Apprenticeships -->
+                                <h5>State has technology-related apprenticeship programs planned or in place.</h5>
                                 <p class="info_p">
-                                    According to the WIOA State plan, “Workers must possess technical skills, such as performing physical or digital tasks,
-                                    understanding programming languages, or using mechanical equipment and tools to meet the needs of Ohio’s businesses.
-                                    Technical skills may be achieved through postsecondary education as well as through a combination of direct instruction
-                                    and training, including participating in work-based activities, such as on-the-job training or apprenticeship.”
+                                    State has technology-related apprenticeship programs planned or in place? The State has either created or demonstrated
+                                    the intent to create an apprenticeship program that specifically targets digital skills development. The State may also
+                                    offer apprenticeship programs in growing fields that require digital skills.
                                 </p>
+
+                                <!-- Online tools -->
+                                <h5>Online skilling tools are offered by the State.</h5>
                                 <p class="info_p">
-                                    The State will invest $28 million in 2020 and $40 million in 2021 in its Choose Ohio First initiative to develop a
-                                    workforce ready for STEMM (Science, Technology, Engineering, Mathematics, and Medicine) occupations. Choose Ohio First
-                                    provides postsecondary students with increased exposure to and awareness about available careers in STEMM industries. A
-                                    portion of the funding will be used for scholarship funding at Ohio’s colleges and universities. Choose Ohio First also
-                                    promotes the recruitment of underrepresented STEMM student groups, including women and students of color. Ohio also wishes to emphasizes STEM and STEAM education by
-                                    utilizing project and case-based learning.
+                                    Online skilling tool offered by State? The State offers resources that provide online digital skills development or
+                                    training. The strongest States offer resources beyond a website that includes eligible training provider lists as
+                                    required under WIOA.
                                 </p>
+
+                                <!-- Additional -->
+                                <h5>State has additional dedicated digital skills initiatives.</h5>
                                 <p class="info_p">
-                                    <span class="strong-no">No example: Alabama</span>
+                                    State has additional dedicated digital skills initiatives? The State has other initiatives that may or may not be
+                                    Statewide and focus on promoting digital skills within the State.
                                 </p>
+
+                                <!-- IWT -->
+                                <h5>State has dedicated incumbent worker training funds.</h5>
                                 <p class="info_p">
-                                    AlabamaSkills USA is a Statewide program working in partnership with Governor Ivey that aims to place 500,000 new
-                                    highly-skilled Alabamians in the workforce by 2025. The program offers training in multiple sectors, including STEM and
-                                    Information Technology. Although this plan is Statewide, this example does not qualify as a “comprehensive plan to
-                                    address digital skills” because its focus is general re-skilling across sectors. The initiative does not place an
-                                    emphasis or focus on the need for digital skills.
+                                    The state has dedicated state funding to incumbent worker training. 
                                 </p>
+
                             </div>
                             
                             <div class="info_section">
