--- a/pages/us_map.html
+++ b/pages/us_map.html
@@ -77,30 +77,27 @@
                     <div class="container">
                         <div class="row">
                             <div class="col">
-                                <figure>
-                                    <h3 class="number" id="demand">0</h3>
-                                    <p class="number-type" id="demand-type">Estimate of job openings requiring digital skills</p>
-                                    <figcaption>
-                                        We determine the number of jobs that require digital skills by searching jobs listings using terms which included
-                                        “computer, data, technology or cloud” on a state-by-state basis and extrapolating the percentage of such jobs by the
-                                        overall percentage of jobs available in such state. This figure is likely an underestimate, because Indeed does not
-                                        capture all job openings, and their method for determining the percentage of jobs that require digital skills may not
-                                        capture many jobs which require other types of digital skills.
-                                    </figcaption>
-                                </figure>
-                                
+                                <h3 class="number" id="demand">0</h3>
+                                <p class="number-type" id="demand-type">Estimate of job openings requiring digital skills</p>
+                                <div class="definition" id="demand-def-hover">
+                                    We determine the number of jobs that require digital skills by searching jobs listings using terms which included
+                                    “computer, data, technology or cloud” on a state-by-state basis and extrapolating the percentage of such jobs by the
+                                    overall percentage of jobs available in such state. This figure is likely an underestimate, because Indeed does not
+                                    capture all job openings, and their method for determining the percentage of jobs that require digital skills may not
+                                    capture many jobs which require other types of digital skills.
+                                </div>
                             </div>
                             <div class="col">
                                 <figure>
                                     <h3 class="number" id="supply">0</h3>
                                     <p class="number-type" id="supply-type">Estimate of unemployed workers without digital skills</p>
-                                    <figcaption>
+                                    <div class="definition" id="supply-def-hover">
                                         We determine the number of unemployed workers without digital skills by taking the total number of unemployed per state
                                         (obtained from the Bureau of Labor Statistics) and take 62 percent, according to Programme for the International
                                         Assessment of Adult Competencies' (PIACC's) finding that 62 percent of unemployed workers lack digital skills. This
                                         number likely varies from state to state, but there is currently no data collection of skills using common metrics at
                                         the state level.
-                                    </figcaption>
+                                    </div>
                                 </figure>
                             </div>
                             <div class="col">
