--- a/pages/us_map.html
+++ b/pages/us_map.html
@@ -62,7 +62,7 @@
                                 <h3>The <span class="strong-no">opportunity gap</span> in <span class="state-name">State</span>:</h3>
                                 There are 
                                 <span class="inline-number" id="supply">0</span>
-                                unemployed who cannot compete for 
+                                unemployed who may not be able to compete for 
                                 <span class="inline-number" id="demand">0</span>
                                 open jobs because they lack digital skills. 
 
@@ -190,7 +190,8 @@
                 </div>
             </div>
             <div class='row'>
-                <div class="col-6">
+                <!-- DONT show for now , fix data and JS  -->
+                <div class="col-6" style="display: none;">
                     <h1>Explore the data</h1>
                     <div class="container" id="explore_data_container">
                         <h5>Coming soon...</h5>
@@ -200,7 +201,7 @@
                                     </div> -->
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-6" style="display: none;">
                     <h1>Read full analysis</h1>
                     <div class="container" id="full_indicator_analysis">
             
